@startuml

title __EXTENDEDCONNECTX's Class Diagram__\n

  namespace cpsc2150.extendedConnectX {
    abstract class cpsc2150.extendedConnectX.AbsGameBoard {
        + toString()
    }
  }
  

  namespace cpsc2150.extendedConnectX {
    class cpsc2150.extendedConnectX.BoardPosition {
        - col : int
        - row : int
        + BoardPosition()
        + equals()
        + getColumn()
        + getRow()
        + toString()
    }
  }
  

  namespace cpsc2150.extendedConnectX {
    class cpsc2150.extendedConnectX.GameBoard {
        - board : char[][]
        - numCols : int
        - numRows : int
        - numTokensToWin : int
        + GameBoard()
        + getNumColumns()
        + getNumRows()
        + getNumToWin()
        + placeToken()
        + whatsAtPos()
    }
  }
  

  namespace cpsc2150.extendedConnectX {
    class cpsc2150.extendedConnectX.GameBoardMem {
        ~ mapBoard : Map<Character, List<BoardPosition>>
        ~ maxCol : int
        ~ maxRow : int
        ~ numToWin : int
        + GameBoardMem()
        + getNumColumns()
        + getNumRows()
        + getNumToWin()
        + isPlayerAtPos()
        + placeToken()
        + whatsAtPos()
    }
  }
  

  namespace cpsc2150.extendedConnectX {
    class cpsc2150.extendedConnectX.GameScreen {
        {static} + maxPlayers : int
        {static} + minPlayers : int
        {static} + main()
    }
  }
  

  namespace cpsc2150.extendedConnectX {
    interface cpsc2150.extendedConnectX.IGameBoard {
        {static} + maxNumToWin : int
        {static} + maxRowsCols : int
        {static} + minRowsCols : int
        + checkDiagWin()
        + checkForWin()
        + checkHorizWin()
        + checkIfFree()
        + checkTie()
        + checkVertWin()
        {abstract} + getNumColumns()
        {abstract} + getNumRows()
        {abstract} + getNumToWin()
        + isPlayerAtPos()
        {abstract} + placeToken()
        {abstract} + whatsAtPos()
    }
  }
  

  cpsc2150.extendedConnectX.AbsGameBoard .up.|> cpsc2150.extendedConnectX.IGameBoard
  cpsc2150.extendedConnectX.GameBoard .up.|> cpsc2150.extendedConnectX.IGameBoard
  cpsc2150.extendedConnectX.GameBoard -up-|> cpsc2150.extendedConnectX.AbsGameBoard
  cpsc2150.extendedConnectX.GameBoardMem -up-|> cpsc2150.extendedConnectX.AbsGameBoard


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
